crates/wolf_mem/tests/snapshots/mem_diagnostics__e1007_take_where_mut.snap
---
source: crates/wolf_mem/tests/mem_diagnostics.rs
expression: render_mem(src)
---
error[E1007]: `bump` declares `n` as `mut`, but the call site says `take`
 --> mem:///main.lu:4:15
  |
1 | fn bump(mut n: int) { n += 1 }
  |             - the parameter is declared here
...
4 |     bump(take x)
  |               ^ this argument
  |
help: write `mut`
  |
4 |     bump(mut x)
  |
